2008-02-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj at axis com>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_init), (gst_udpsrc_create),
	(gst_udpsrc_get_property), (gst_udpsrc_start), (gst_udpsrc_unlock),
	(gst_udpsrc_unlock_stop), (gst_udpsrc_stop):
	* gst/udp/gstudpsrc.h:
	Port to GstPoll. See #505417.

2008-02-28  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/law/mulaw-decode.c: (gst_mulawdec_chain):
	Return GST_FLOW_NOT_NEGOTIATED when the caps are not set
	yet on the srcpad. We need rate and channels before we
	can do any processing. Fixes bug #519088.

2008-02-26  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Detect and indicate if GCC inline assembly syntax is
	available.

	* gst/goom/Makefile.am:
	* gst/goom/convolve_fx.c:
	* gst/goom/flying_stars_fx.c:
	* gst/goom/goom_config.h:
	* gst/goom/goom_core.c:
	* gst/goom/goomsl.c:
	* gst/goom/ifs.c:
	* gst/goom/mmx.c:
	* gst/goom/plugin_info.c:
	* gst/goom/xmmx.c:
	Fix various GCC-isms, and only build the inline assembly
	with compilers that support GCC inline assembly.

	Fix a couple of other warnings shown with Forte.

2008-02-25  Stefan Kost  <ensonic@users.sf.net>

	* gst/goom/xmmx.c:
	  Use 'emms' instead of 'femms' to not crash on cpus that do not
	  implement this 3dnow specific instruction.

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/goom/plugin_info.c: (setOptimizedMethods):
	Use extended MMX for draw_line() too if available, not only
	normal MMX.

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/jpeg/gstjpeg.c: (plugin_init):
	Remove (commented out) smoke typefinder. This is in base now.

2008-02-23  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/goom2k1/Makefile.am:
	* gst/goom2k1/gstgoom.c:

	Rename the installed library, and don't register the same 
	GType name as the new goom.

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* ext/taglib/Makefile.am: